@startuml

title __WEBSCRAPPER's Class Diagram__\n

  namespace  {
    namespace ebScrapper {
      class WebScrapper.Connection {
          {static} - count : AtomicInteger
          - id : int
          - name : String
          - url : String
          + Connection()
          + equals()
          + getName()
          + hashCode()
          + toString()
          ~ getUrl()
      }
    }
  }
  

  namespace  {
    namespace ebScrapper {
      abstract class WebScrapper.WebScrapper {
          ~ v : Vertex<Webpage>
          ~ visited : Set<Vertex<Webpage>>
          + WebScrapper()
          + WebScrapper()
          + checkLink()
          + getV()
          + getVisited()
          {abstract} + populateGraph()
          + setV()
          ~ observerMethods()
          ~ printElements()
      }
    }
  }
  

  namespace  {
    namespace ebScrapper {
      class WebScrapper.WebScrapperAutomatic {
          + WebScrapperAutomatic()
          + WebScrapperAutomatic()
          + populateGraph()
          - pagesToVertex()
      }
    }
  }
  

  namespace  {
    namespace ebScrapper {
      class WebScrapper.WebScrapperIterative {
          - list : List<String>
          + WebScrapperIterative()
          + WebScrapperIterative()
          + getList()
          + populateGraph()
          + setList()
          - findVertex()
          - getAllLinks()
          - pagesToVertex()
      }
    }
  }
  

  namespace  {
    namespace ebScrapper {
      class WebScrapper.Webpage {
          - notFound : boolean
          - title : String
          - url : String
          + equals()
          + getTitle()
          + getUrl()
          + hashCode()
          + isNotFound()
          + setLog()
          + toString()
          ~ Webpage()
      }
    }
  }
  

  WebScrapper.Connection .up.|> java.io.Serializable
  WebScrapper.WebScrapper -up-|> java.util.Observable
  WebScrapper.WebScrapperAutomatic -up-|> WebScrapper.WebScrapper
  WebScrapper.WebScrapperIterative -up-|> WebScrapper.WebScrapper
  WebScrapper.Webpage .up.|> java.io.Serializable
  WebScrapper.Webpage o-- Persistence.Logs : log


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
